Ensure default dialog button focus remains after a dialog update.

BUG=709346

Review-Url: https://codereview.chromium.org/2807653002
Cr-Commit-Position: refs/heads/master@{#475165}

Former-commit-id: db4ba3ee847c91f8d5120757389c96036b01c37d